--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -75,7 +75,7 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage/clover.xml
+        files: ./coverage/clover.xml
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: true
